<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_comment"
        android:orientation="vertical"
        android:paddingBottom="@dimen/p18"
        android:paddingLeft="@dimen/p24"
        android:paddingRight="@dimen/p24"
        android:paddingTop="@dimen/p18">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dialog_share_title"
            android:textColor="@color/c4_black"
            android:textSize="@dimen/s1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/p18"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_wx"
                style="@style/shareButtonStyle"
                android:drawableTop="@drawable/btn_weixin"
                android:text="@string/dialog_share_weixin" />

            <Button
                android:id="@+id/bt_wx_friend"
                style="@style/shareButtonStyle"
                android:drawableTop="@drawable/btn_friend"
                android:text="@string/dialog_share_friend" />

            <Button
                android:id="@+id/bt_sina"
                style="@style/shareButtonStyle"
                android:drawableTop="@drawable/btn_weibo"
                android:text="@string/dialog_share_sina" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/p13">


            <Button
                android:id="@+id/bt_qq"
                style="@style/shareButtonStyle"
                android:drawableTop="@drawable/btn_qq"
                android:text="@string/dialog_share_qq" />

            <Button
                android:id="@+id/bt_qzone"
                style="@style/shareButtonStyle"
                android:drawableTop="@drawable/btn_zone"
                android:text="@string/dialog_share_zone" />

            <Button
                android:id="@+id/bt_copy"
                style="@style/shareButtonStyle"
                android:drawableTop="@drawable/btn_copy"
                android:text="@string/dialog_share_copy_url" />

        </LinearLayout>
    </LinearLayout>

    <!-- <Button
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h45"
        android:layout_marginTop="@dimen/p10"
        android:background="@drawable/bg_comment"
        android:text="@string/dialog_share_cancel"
        android:textColor="@color/c4_black"
        android:textSize="@dimen/s1" /> -->

</LinearLayout>