<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_comment"
    android:minWidth="@dimen/p268"
    android:orientation="vertical"
    android:padding="@dimen/p29" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dialog_login_other"
        android:textColor="@color/c4_black"
        android:textSize="@dimen/s1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/p23"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_with_qq"
            style="@style/shareButtonStyle"
            android:drawableTop="@drawable/btn_qq"
            android:text="@string/dialog_login_qq" />

        <Button
            android:id="@+id/login_with_weixin"
            style="@style/shareButtonStyle"
            android:drawableTop="@drawable/btn_weixin"
            android:text="@string/dialog_login_weixin" />

        <Button
            android:id="@+id/login_with_weibo"
            style="@style/shareButtonStyle"
            android:drawableTop="@drawable/btn_weibo"
            android:text="@string/dialog_login_weibo" />
    </LinearLayout>

</LinearLayout>