<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tabView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/titlebar_height"
    android:background="@color/c1_light_orange"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/p10"
    android:paddingRight="@dimen/p10" >

    <RelativeLayout
        android:id="@+id/tab_layout_handpick"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.feibo.joke.view.widget.TabView
            android:id="@+id/tabview_handpick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tabView:messageHint="false"
            tabView:select="true"
            tabView:tabText="@string/handpick" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tab_layout_found"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.feibo.joke.view.widget.TabView
            android:id="@+id/tabview_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tabView:messageHint="false"
            tabView:select="true"
            tabView:tabText="@string/found" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tab_layout_dynamic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.feibo.joke.view.widget.TabView
            android:id="@+id/tabview_dynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tabView:messageHint="false"
            tabView:select="true"
            tabView:tabText="@string/dynamic" />
    </RelativeLayout>

</LinearLayout>